--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "better-sqlite3": "^9.4.0",
     "dotenv": "^16.4.5",
-    "grammy": "^1.38.4"
+    "grammy": "^1.38.4",
+    "node-cron": "^4.2.1"
   }
 }
